--- a/src/app/small-bio/small-bio.component.html
+++ b/src/app/small-bio/small-bio.component.html
@@ -1,13 +1,14 @@
-<mat-grid-list cols="2">
-	<mat-grid-tile>
-		<mat-card class="bio-card">
-			<img mat-card-img src="assets/profile_jared.jpeg" alt="I actually have long hair meow.">
-		</mat-card>
-	</mat-grid-tile>
-	<mat-grid-tile>
-		<mat-card class="bio-card">
-			<h3>Engineer. Lifelong Student. Athelte.</h3>
-
-		</mat-card>
-	</mat-grid-tile>
-</mat-grid-list>
+<div class="content">
+	<div fxLayout="row wrap" fxLayoutGap="16px grid">
+		<div fxFlex="50%" fxFlex.xs="100%" fxFlex.sm="50%">
+			<mat-card class="mat-elevation-z4">
+				<img mat-card-img src="assets/profile_jared.jpeg">
+			</mat-card>
+		</div>
+		<div fxFlex="50%" fxFlex.xs="100%" fxFlex.sm="50%">
+			<mat-card class="mat-elevation-z4">
+				<h3>Software Engineer. Lifelong Student. Team Player.</h3>
+			</mat-card>
+		</div>
+	</div>
+</div>
