--- a/src/app/small-bio/small-bio.component.scss
+++ b/src/app/small-bio/small-bio.component.scss
@@ -1,9 +1,13 @@
-.bio-image {
-	width: 100px;
-	height: 100px;
+mat-card img{
+  object-fit: cover;
+  width: 100%; 
+  height: 100%;
 }
 
-.bio-card {
-	width: calc(100%-10px);
-	height: calc(100%-10px);
+.content {
+    padding: 16px;
+}
+
+.content > mat-card {
+    width: 200px;
 }
