But what am I really?

--- a/src/app/small-bio/small-bio.component.html
+++ b/src/app/small-bio/small-bio.component.html
@@ -7,7 +7,7 @@
 		</div>
 		<div fxFlex="50%" fxFlex.xs="100%" fxFlex.sm="50%" style="align-self: center">
 			<mat-card class="mat-elevation-z4">
-				<h3 class="main-font" style="text-align: center">Software Engineer. Hacker of things. Team Player.</h3>
+				<h3 class="main-font" style="text-align: center">Software Engineer. Penguin Hacker. Team Player.</h3>
 			</mat-card>
 		</div>
 	</div>
